implementation of POST api
