# Encrypt_project/password_encryption/swagger/user_password.yaml
@@ -85,29 +85,29 @@ paths:
 #          description: "Unauthorized"
 #        404:
 #          description: "Not found"
-#  /user/add:
-#    post:
-#      tags:
-#      - "users"
-#      summary: "Add a new user and password"
-#      description: ""
-#       operationId: password_encryption.api.password_handle.User_create
-#      consumes:
-#      - "application/json"
-#      - "application/xml"
-#      produces:
-#      - "application/xml"
-#      - "application/json"
-#      parameters:
-#      - in: "body"
-#        name: "body"
-#        description: "User object that needs to be added"
-#        required: true
-#        schema:
-#          $ref: "#/definitions/User"
-#      responses:
-#        405:
-#          description: "Invalid input"
+  /user/add:
+    post:
+      tags:
+      - "users"
+      summary: "Add a new user and password"
+      description: ""
+      operationId: password_encryption.api.password_handle.User_create
+      consumes:
+      - "application/json"
+      - "application/xml"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "User object that needs to be added"
+        required: true
+        schema:
+          $ref: "#/definitions/User"
+      responses:
+        405:
+          description: "Invalid input"
 #  /user/update:
 #    put:
 #      tags:
